<resources>
    <string name="app_name">Aplicacion_Vikingos</string>
    <string name="welcome_to">Welcome to</string>
    <string name="viking_market">VIKING MARKET</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="sign_up">Or Sign Up</string>
    <string name="sign_in_with_apple">Sign in with Apple</string>
    <string name="sign_in_with_android">Sign in with Android</string>
    <string name="search">Search</string>
    <string name="weapons">Weapons</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="log_in">LOG IN</string>
    <string name="welcome_jarl_erik">Welcome, Jarl Erik</string>
    <string name="_350">350</string>
    <string name="_1">1</string>
    <string name="viking_sword">Viking Sword</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="varics">Varics</string>
    <string name="width_3_5cm">Width ............. 3.5cm</string>
    <string name="length_95cm">Length ............ 95cm</string>
    <string name="weigth_1_2kg">Weigth ............ 1.2kg</string>
    <string name="armor">Armor</string>
    <string name="clothing">Clothing</string>
    <string name="artifacts">Artifacts</string>
    <string name="recommend_for_you">Recommend for you</string>
    <string name="_1_200_g">1,200 G</string>
    <string name="checkout">Checkout</string>
    <string name="pay_with_pay">Pay with pay</string>
    <string name="viking_sword_x1">Viking Sword x1</string>
    <string name="_1_250g">1,250G</string>
    <string name="order_sumary">Order Sumary</string>
    <string name="subtotal">Subtotal:</string>
    <string name="shipping">Shipping:</string>
    <string name="_50g">50G</string>
    <string name="total">Total:</string>
    <string name="payment_information">Payment Information</string>
    <string name="erik_thorvaldsson">Erik Thorvaldsson</string>
    <string name="visa">VISA</string>
    <string name="_4567">**** **** ****4567</string>
    <string name="_12_25">12/25</string>
    <string name="_123">123</string>
    <string name="payment_successful">Payment Successful!</string>
    <string name="your_order_has_been_placed_nthank_you_for_shopping_at_viking_market_nan_email_conminiation_has_seen_sent_to_nerik_example_com">Your order has been placed! \nThank you for shopping at Viking Market. \nAn email conminiation has seen sent to \nerik@example.com.</string>
    <string name="total_paid">Total Paid:</string>
    <string name="continue_shopping">Continue Shopping</string>
    <string name="my_account">My Account</string>
    <string name="jarl_erik">Jarl Erik</string>
    <string name="erik_example_com">erik@example.com</string>
    <string name="_950">950</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="my_orders">My Orders</string>
    <string name="payment_methods">Payment Methods</string>
    <string name="shipping_adress">Shipping Adress</string>
    <string name="change_avatar">Change avatar</string>
    <string name="log_out">Log Out</string>
    <string name="full_name">Full name</string>
    <string name="email_adress">Email Adress</string>
    <string name="phone_number">Phone Number</string>
    <string name="_46_701234567">+46 701234567</string>
    <string name="upsala_sweden">Upsala, Sweden</string>
    <string name="order_1647">Order #1647</string>
    <string name="april_24_2024">April 24, 2024</string>
    <string name="view_order">View Order</string>
    <string name="order_1623">Order #1623</string>
    <string name="april_10_2024">April 10, 2024</string>
    <string name="live_transmissions">Live Transmissions</string>
    <string name="_163">163</string>
    <string name="viking_combat_tournament">Viking Combat Tournament</string>
    <string name="_1_2k_watching">1.2K watching</string>
    <string name="_255">255</string>
    <string name="viking_expedition_at_sea">Viking Expedition at Sea</string>
    <string name="_735_watching">735 watching</string>
    <string name="_253">253</string>
    <string name="great_figth_the_axe_mote_win">Great figth! The axe mote win!</string>
    <string name="gudrun">Gudrun</string>
    <string name="for_honor_and_glory">For honor and glory!</string>
    <string name="gjonn">Gjonn</string>
    <string name="this_is_intense">This is intense 👏</string>
    <string name="batal">Batal</string>
    <string name="skal_ot_the_strong_preval">Skal! ot the strong preval!</string>
    <string name="text_comments">Text: Comments</string>
    <string name="a_finely_crafted_norse_ongsword_with_a_sharp_nsteel_blade_an_intricately_engraved_hilt_and_a_nleather_wrapped_grip_perfect_for_any_modern_nday_viking_warrior">A finely crafted Norse ongsword with a sharp \nsteel blade, an intricately engraved hilt, and a \nleather-wrapped grip. Perfect for any modern \nday Viking warrior.</string>
    <string name="notifications">Notifications</string>
    <string name="viking_raids">Viking Raids</string>
    <string name="join">JOIN</string>
    <string name="saturday_left">Saturday left</string>
    <string name="raid_on_england">Raid on England</string>
    <string name="_15_s_pots_left">15 S pots left</string>
    <string name="raid_on_france">Raid on France</string>
    <string name="join_the_raid_on_english_shores_at_dawn_plunder_nvillages_bring_back_riches_and_earn_glory">Join the raid on English shores at dawn. Plunder \nvillages, bring back riches and earn glory.</string>
    <string name="leaders">Leaders</string>
    <string name="shieldmadien">Shieldmadien</string>
    <string name="objectives">Objectives</string>
    <string name="loot_saxon_villages">Loot Saxon Villages</string>
    <string name="join_raid">JOIN RAID</string>
    <string name="capture_treasures">Capture Treasures</string>
    <string name="you_have_successfully_joined_the_raid_nprepare_for_battle">You have successfully joined the raid. \nPrepare for battle!</string>
    <string name="ok">OK</string>
    <string name="__1">1</string>
    <string name="sunday_at_dawn">Sunday at dawn</string>
    <string name="_8_s_pots_left">8 S pots left</string>
    <string name="joined_successfully">Joined Successfully!</string>
</resources>