<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/fondo_pantalla"
    tools:context=".MainActivity2">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_inicio_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.07" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_fin_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.11" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margen_izquierdo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/margen_derecho"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9075426" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_fin_market"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/guide_line_fin_welcome"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guide_line_inicio_welcome">

        <ImageView
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_marginStart="30dp"
            android:scaleType="centerCrop"
            android:src="@drawable/linea_amarilla"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/welcome_to"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:fontFamily="@font/cormorant_garamond"
            android:text="@string/welcome_to"
            android:textColor="@color/amarillo_vikingo"
            android:textSize="25sp"
            android:textStyle="bold"
            android:textAppearance="@style/TextShadowStyle"/>

        <ImageView
            android:layout_width="100dp"
            android:layout_height="2dp"
            android:layout_marginEnd="30dp"
            android:scaleType="centerCrop"
            android:src="@drawable/linea_amarilla"
            android:layout_gravity="center"/>

    </LinearLayout>

    <TextView
        android:id="@+id/viking_market"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:fontFamily="@font/cormorant_garamond"
        android:text="@string/viking_market"
        android:textColor="@color/amarillo_vikingo"
        android:textSize="40sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toStartOf="@id/margen_derecho"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/margen_izquierdo"
        app:layout_constraintTop_toBottomOf="@id/guide_line_fin_welcome"
        android:textAppearance="@style/TextShadowStyle"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="300dp"
        android:layout_height="2dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        android:src="@drawable/linea_amarilla"
        app:layout_constraintBottom_toTopOf="@+id/guide_line_fin_market"
        app:layout_constraintEnd_toStartOf="@+id/margen_derecho"
        app:layout_constraintHorizontal_bias="0.437"
        app:layout_constraintStart_toStartOf="@+id/margen_izquierdo"
        app:layout_constraintTop_toBottomOf="@+id/viking_market"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_inicio_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_fin_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.58" />

    <EditText
        android:id="@+id/editTextText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/email"
        android:textColorHint="@color/amarillo_vikingo"
        android:inputType="textEmailAddress"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/cormorant_garamond"
        android:drawableStart="@drawable/mensaje_1_"
        android:drawablePadding="10dp"
        android:paddingStart="15dp"
        android:background="@drawable/fondo_contrasena"
        app:layout_constraintTop_toBottomOf="@id/guide_line_inicio_login"
        app:layout_constraintStart_toStartOf="@id/margen_izquierdo"
        app:layout_constraintEnd_toStartOf="@id/margen_derecho"
        android:textAppearance="@style/TextShadowStyle"/>

    <EditText
        android:id="@+id/contraseña"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        android:textColorHint="@color/amarillo_vikingo"
        android:drawableStart="@drawable/candado"
        android:drawablePadding="10dp"
        android:paddingStart="15dp"
        android:inputType="text"
        android:textColor="@color/amarillo_vikingo"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/cormorant_garamond"
        android:layout_marginTop="12dp"
        android:background="@drawable/fondo_contrasena"
        app:layout_constraintTop_toBottomOf="@id/editTextText"
        app:layout_constraintStart_toStartOf="@id/margen_izquierdo"
        app:layout_constraintEnd_toStartOf="@id/margen_derecho"
        android:textAppearance="@style/TextShadowStyle"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_central"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:buttonTint="@color/amarillo_vikingo"
        android:text="@string/remember_me"
        android:textColor="@color/amarillo_vikingo"
        android:textSize="15sp"
        android:fontFamily="@font/cormorant_garamond"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/contraseña"
        app:layout_constraintStart_toStartOf="@id/margen_izquierdo"
        app:layout_constraintEnd_toStartOf="@id/guide_line_central"
        android:textAppearance="@style/TextShadowStyle"/>

    <TextView
        android:id="@+id/textView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:fontFamily="@font/cormorant_garamond"
        android:gravity="end"
        android:text="@string/forgot_password"
        android:textColor="@color/amarillo_vikingo"
        android:textSize="15sp"
        app:layout_constraintEnd_toStartOf="@id/margen_derecho"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/guide_line_central"
        app:layout_constraintTop_toBottomOf="@id/contraseña"
        android:textAppearance="@style/TextShadowStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_login"
        android:layout_width="339dp"
        android:layout_height="57dp"
        android:background="@drawable/boton_madera"
        android:gravity="center"
        android:text="@string/log_in"
        android:textStyle="bold"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:fontFamily="@font/cormorant_garamond"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toTopOf="@+id/guide_line_fin_login"
        app:layout_constraintEnd_toStartOf="@+id/margen_derecho"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="@+id/margen_izquierdo"
        app:layout_constraintTop_toBottomOf="@+id/checkBox" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guide_line_final"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.82" />

    <LinearLayout
        android:id="@+id/linear_layout_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/button_apple"
        app:layout_constraintEnd_toStartOf="@+id/margen_derecho"
        app:layout_constraintStart_toStartOf="@+id/margen_izquierdo"
        app:layout_constraintTop_toTopOf="@+id/guide_line_fin_login">

        <ImageView
            android:layout_width="120dp"
            android:layout_height="2dp"
            android:layout_gravity="center"
            android:layout_marginStart="30dp"
            android:scaleType="centerCrop"
            android:src="@drawable/linea_amarilla" />

        <TextView
            android:id="@+id/sign_up"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/sign_up"
            android:textColor="@color/amarillo_vikingo"
            android:textSize="20sp"
            android:textStyle="bold"
            android:fontFamily="@font/cormorant_garamond"
            android:textAppearance="@style/TextShadowStyle"/>

        <ImageView
            android:layout_width="120dp"
            android:layout_height="2dp"
            android:layout_marginEnd="30dp"
            android:scaleType="centerCrop"
            android:src="@drawable/linea_amarilla"
            android:layout_gravity="center"/>

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_apple"
        android:layout_width="339dp"
        android:layout_height="57dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/boton_comprar"
        android:gravity="start|center_vertical"
        android:text="@string/sign_in_with_apple"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:fontFamily="@font/cormorant_garamond"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:icon="@drawable/apple_logo"
        app:iconGravity="textStart"
        app:iconPadding="15dp"
        app:iconTint="@color/amarillo_vikingo"
        app:layout_constraintEnd_toStartOf="@+id/margen_derecho"
        app:layout_constraintHorizontal_bias="0.857"
        app:layout_constraintStart_toStartOf="@+id/margen_izquierdo"
        app:layout_constraintTop_toBottomOf="@+id/linear_layout_sign_up"
        android:textAppearance="@style/TextShadowStyle"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_android"
        android:layout_width="339dp"
        android:layout_height="57dp"
        android:background="@drawable/boton_comprar"
        android:gravity="start|center_vertical"
        android:text="@string/sign_in_with_google"
        android:textColor="@color/white"
        android:textStyle="bold"
        android:textSize="25sp"
        android:fontFamily="@font/cormorant_garamond"
        app:backgroundTint="@null"
        app:icon="@drawable/google_logo"
        app:iconGravity="textStart"
        app:iconPadding="15dp"
        app:iconTint="@color/amarillo_vikingo"
        app:layout_constraintBottom_toTopOf="@+id/guide_line_final"
        app:layout_constraintEnd_toStartOf="@+id/margen_derecho"
        app:layout_constraintHorizontal_bias="0.714"
        app:layout_constraintStart_toStartOf="@+id/margen_izquierdo"
        app:layout_constraintTop_toBottomOf="@+id/button_apple"
        android:textAppearance="@style/TextShadowStyle"/>

    <ImageView
        android:id="@+id/boton2"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="48dp"
        android:clickable="true"
        android:focusable="true"
        android:src="@drawable/micro"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guide_line_final"
        app:layout_constraintVertical_bias="0.211" />


</androidx.constraintlayout.widget.ConstraintLayout>